bad/assign_field_string_new_class_class.example_compiler_output
ERROR
[1mbad/assign_field_string_new_class_class.lat:9:14: [1;31merror: [0;1massigning to `string` from incompatible type `Y`[m
	(new C).fld = new Y;
	            [1;32m^[m
